# xhtm

./: .coveragerc  .flake8  .xproject_python  Makefile  pyproject.toml  requirements.txt  setup.py
example/: login.py
toolkit/memory/: xhtml.py
xhtml/: __init__.py  attribute.py
xhtml/element/: __init__.py  attr.py  tag.py
xhtml/flask/: proxy.py
xhtml/header/: __init__.py  accept.py  headers.py
xhtml/locale/: __init__.py  template.py
xhtml/request/: __init__.py  proxy.py  stream.py
xhtml/resource/: __init__.py
xhtml/template/: __init__.py
xhtml/unittest/: test_element.py  test_header.py  test_locale.py  test_resource.py
