[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-requirements-txt",
    "hatchling",
]

[project]
authors = [
    { name = "Mingzhe Zou", email = "zoumingzhe@outlook.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
description = "Rendering HTML Text"
dynamic = [
    "dependencies",
    "version",
]
keywords = []
name = "xhtm"
requires-python = ">=3.8"

[project.license]
file = "LICENSE"

[project.readme]
content-type = "text/markdown"
file = "readme.md"

[project.scripts]

[project.urls]
Homepage = "https://github.com/bondbox/xhtm/"

[tool.hatch.build.targets.sdist]
exclude = [
    "xhtml/unittest",
]
packages = [
    "xhtml",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "xhtml/unittest",
]
packages = [
    "xhtml",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = [
    "requirements.txt",
]

[tool.hatch.version]
path = "xhtml/attribute.py"
